--- a/frontend/src/app/styles/globals.css
+++ b/frontend/src/app/styles/globals.css
@@ -5,6 +5,13 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --blue1: '#A3CCE0',
+  --blue2: '#00ABFA',
+  --blue3: '#297BD4',
+  --blue4: '#031996',
+  --blue5: '064972',
+  --white: '#C1C6E1',
+  --grey: '#D9D9D9'
 }
 
 @media (prefers-color-scheme: dark) {
@@ -18,4 +25,12 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.grocery {
+  width: 260px;
+  height: 378px;
+  flex-shrink: 0;
+  border-radius: 42px;
+  background: var(--blue3);
 }
