--- a/frontend/src/app/styles/fridge.module.css
+++ b/frontend/src/app/styles/fridge.module.css
@@ -6,6 +6,54 @@
     --blue3: #297BD4;
     --blue4: #031996;
     --blue5: #064972;
-    --white: #C1C6E1;
+    --white: #FFFFFF;
     --grey: #D9D9D9;
 }
+/* width: 1280px, height: 832px */
+html, body
+{
+    height: 100%;
+}
+
+.frame {
+    margin-right: 3%;
+    margin-top: 5%;
+    /* tryna center vertically might change margin-top */
+    float: right;
+    /* keep right */
+    width: 32%;
+    height: 83vh;
+    /* viewport height */
+    flex-shrink: 0;
+    border-radius: 61px;
+    background: var(--blue4);
+    font-size: 25;
+    justify-content: center;
+    position: relative;
+    padding-left: 2%;
+    padding-top: 1.5%
+    /* should find a centering way */
+}
+
+.lining {
+    position: absolute;
+    z-index: 2;
+    border-radius: 28px;
+    background: #FFFFFF;
+    /* weird bug can't use typical colours */
+    width: 88%;
+    height: 93%;
+    flex-shrink: 0;
+    padding-top: 4%;
+}
+
+.shadows {
+    border-radius: 22px;
+    background: #EEEBEB;
+    width: 100%;
+    height: 15%;
+    flex-shrink: 0;
+}
+
+
+
