--- a/frontend/src/app/styles/fridge.module.css
+++ b/frontend/src/app/styles/fridge.module.css
@@ -44,7 +44,6 @@ html, body
     width: 88%;
     height: 93%;
     flex-shrink: 0;
-    padding-top: 4%;
 }
 
 .shadows {
@@ -53,7 +52,22 @@ html, body
     width: 100%;
     height: 15%;
     flex-shrink: 0;
+    margin-top: 4%;
+    display: flex;
+    align-items: flex-end;
 }
 
+.shelves {
+    z-index: 100;
+    width: 100%;
+    height: 23%;
+    flex-shrink: 0;
+    background: var(--blue4);
+    display: flex;
+}
+
+/* .empty {
+
+} */
 
 
