--- a/frontend/src/app/styles/fridge.module.css
+++ b/frontend/src/app/styles/fridge.module.css
@@ -8,6 +8,7 @@
     --blue5: #064972;
     --white: #FFFFFF;
     --grey: #D9D9D9;
+    --beige: #EEEBEB;
 }
 /* width: 1280px, height: 832px */
 html, body
@@ -48,7 +49,7 @@ html, body
 
 .shadows {
     border-radius: 22px;
-    background: #EEEBEB;
+    background: var(--beige);
     width: 100%;
     height: 15%;
     flex-shrink: 0;
