--- a/frontend/src/app/styles/grocerylist.module.css
+++ b/frontend/src/app/styles/grocerylist.module.css
@@ -10,22 +10,7 @@
     --grey: #D9D9D9;
 }
 
-.block {
-    width: 260px;
-    height: 378px;
-    flex-shrink: 0;
-    border-radius: 42px;
-    background: var(--blue3);
-    font-size: 25;
-}
-.title {
-    color: var(--blue4);
-    font-family: Outfit;
-    font-size: 75px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    width: 569px;
-    height: 67px;
-    flex-shrink: 0;
+.frame{
+    border-radius: 4.2%;
+    background: #297BD4;
 }
