--- a/frontend/src/app/styles/recipe.module.css
+++ b/frontend/src/app/styles/recipe.module.css
@@ -6,6 +6,54 @@
     --blue3: #297BD4;
     --blue4: #031996;
     --blue5: #064972;
+    --blue6: #064972;
     --white: #C1C6E1;
     --grey: #D9D9D9;
+}
+
+.frame {
+    position: relative;
+    width: 25%; 
+    height: 25vh;
+    background: var(--blue6);
+    border-radius: 42px;
+    margin-right: 3%;
+    margin-top: 15%;
+    margin-left: 35%;
+}
+
+.description {
+    border-radius: 42px;
+    opacity: 0.5;
+    background: #D9D9D9;
+    width: 60%;
+    height: 15vh;
+    position: relative; /* Or absolute if needed */
+    top: 32%;
+    left: 5%;
+    display: flex;
+    align-items: flex-end;
+    flex-shrink: 0;
+}
+
+.text {
+    position: absolute; 
+    margin-top: 4%;
+    margin-left: 6%;
+    font-size: 20px; /* Adjust as needed */
+    color: #ffffff; /* Text color */
+  }
+
+.expand_icon {
+    position: absolute;
+    margin-top: 6%;
+    margin-left: 88%;
+    fill: none;
+}
+
+.bowl_icon {
+    position: absolute;
+    margin-top: 20%;
+    margin-left: 69%;
+    fill: none;
 }
