--- a/frontend/src/app/styles/popup1.module.css
+++ b/frontend/src/app/styles/popup1.module.css
@@ -13,10 +13,44 @@
 
 .backdisplay {
     z-index: 100000;
-    background-color: #171717;
+    background-color: var(--blue1);
     position: fixed; 
     top: 0;         /* Start at the top of the page */
     left: 0;        /* Start at the left of the page */
     width: 100%;   
     height: 100%;  
+}
+
+.close {
+    background: #354052;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 8px 16px;
+    margin-top: 16px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+}
+
+.title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    font-size: 35px;
+}
+.hold {
+    margin-top: 10%;
+}
+
+.arrow {
+    margin-left: 2%;
+    margin-top: 2%
 }
