--- a/frontend/src/app/styles/expired.module.css
+++ b/frontend/src/app/styles/expired.module.css
@@ -11,7 +11,7 @@
 }
 
 .frame {
-    position: relative; /* Needed for absolute positioning of children */
+    position: relative;
     width: 25%;
     height: 25vh; 
     background: var(--blue2);
@@ -21,37 +21,67 @@
     margin-left: 35%;
     padding: 10px; 
     display: flex;
-    justify-content: center; 
-    align-items: center;
+    flex-direction: column; 
+    justify-content: flex-start; 
+    align-items: center; 
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); 
 }
 
-.alert_icon {
-    position: absolute; /* Place the icon above the scroll */
-    top: 5.5%; /* Adjust position within the frame */
-    left: 6%; /* Adjust position within the frame */
-    z-index: 2; /* Ensure it's above the .scroll element */
-    width: 40px; 
-    height: 40px; 
+.top {
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    width: 100%; 
+    margin-top: -5%;
+}
+
+.alert1_icon {
+    width: 40%; 
+    height: 40%; 
+    margin-right: 8%; 
+}
+
+.alert2_icon {
+    width: 40%; 
+    height: 40%; 
+    margin-left: 8%; 
+}
+
+
+.text {
+    font-size: 1.5em;
+    color: #fff; 
+    font-weight: bold;
 }
 
 .scroll {
-    position: relative; /* Keep it positioned within the .frame */
-    width: 90%; 
-    height: 65%; 
+    margin-top: -4%;
+    position: relative;
+    width: 100%; 
+    height: 70%; 
     overflow-y: auto; 
     background: var(--blue2); 
-    margin-top: 10%; /* Push it down to avoid overlapping with the SVG */
-    z-index: 1; /* Ensure it is below the .alert_icon */
+    padding: 10px;
+    border-radius: 42px;
 }
 
-/* Style the scrollbar */
+.scroll p {
+    background: var(--blue3); 
+    color: #fff; 
+    padding: 10px; 
+    border-radius: 25px; 
+    margin: 10px 0; 
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2); 
+    text-align: center; 
+}
+
+
 .scroll::-webkit-scrollbar {
     width: 4px; 
 }
 
 .scroll::-webkit-scrollbar-thumb {
-    background: var(--blue3);
+    background: var(--blue5);
     border-radius: 8px;
 }
 
@@ -60,8 +90,7 @@
     border-radius: 8px;
 }
 
-/* For Mozilla Firefox */
 .scroll {
     scrollbar-width: thin; 
-    scrollbar-color: var(--blue3) var(--grey); 
+    scrollbar-color: var(--blue5) var(--grey); 
 }
