--- a/frontend/src/app/styles/grocerylist.module.css
+++ b/frontend/src/app/styles/grocerylist.module.css
@@ -16,8 +16,9 @@
     height: 45vh; /*height of container*/
 
     /*adjust margins */
-    margin-top: 20%; 
+    margin-top: 40%; 
     margin-left: 12%;
+    margin-bottom: -40%;
 }
 .frame {
     position: absolute; /* Stack element relative to the container */
@@ -56,7 +57,7 @@
     background: #FFF;
     z-index: 2;
 }
-.liningcontain{
+.linecontain{
     position: absolute;
     /*adjust position*/
     top: 30%;
@@ -66,4 +67,18 @@
     height: 0.5%;
     background: #FFF;
     z-index: 2;
+    
+}
+.lining3{
+    position: absolute;
+    /*adjust position*/
+    top: 37%;
+    left: 15%;
+
+    /*adjust size*/
+    width: 73%;
+    height: 0.5%;
+    background: #FFF;
+    z-index: 2;
+    
 }
