--- a/frontend/src/app/styles/fridge.module.css
+++ b/frontend/src/app/styles/fridge.module.css
@@ -78,5 +78,25 @@ html, body
 
 }
 
+.info {
+    border-radius: 18px;
+    border: 3px solid var(--blue4);
+    background: var(--white);
+    width: 196px;
+    height: 105px;
+    flex-shrink: 0;
+    display: flex;
+}
+
+.words {
+    font-size: 14px;
+    margin-left: 5%;
+    margin-top: 3%;
+    flex-direction: column;
+}
+.delete {
+    color:red;
+}
+
 
 
