--- a/frontend/src/app/styles/button1.module.css
+++ b/frontend/src/app/styles/button1.module.css
@@ -1,23 +1,12 @@
-:root {
-    --background: #ffffff;
-    --foreground: #171717;
-    --blue1: #A3CCE0;
-    --blue2: #00ABFA;
-    --blue3: #297BD4;
-    --blue4: #031996;
-    --blue5: #064972;
-    --white: #C1C6E1;
-    --grey: #D9D9D9;
-    --beige: #EEEBEB;
-}
-
 .container {
-    display: flex; /* Enables horizontal alignment */
-    justify-content: flex-start; /* Align items to the left */
-    align-items: center; /* Vertically center items */
-    gap: 20px; /* Adds space between the buttons */
-    padding: 20px; /* Optional: Adjust spacing around the buttons */
-    margin-top: 200px
+    display: flex;
+    justify-content: center; /* Center the buttons horizontally */
+    align-items: center;
+    gap: 20px; /* Space between buttons */
+    margin-top: 50px; /* Increased margin to move buttons closer to the recipe block */
+    margin-right: 35%;
+    margin-bottom: -12%;
+    margin-top: 20%
 }
 
 .main {
@@ -27,7 +16,7 @@
     height: 81px;
     display: flex;
     align-items: center;
-    padding-left: 10px; /* Adjusts the spacing inside the button */
+    padding-left: 10px;
     cursor: pointer;
     transition: background 0.3s ease;
 }
@@ -41,7 +30,7 @@
     font-family: Outfit, sans-serif;
     font-size: 22px;
     font-weight: 700;
-    margin-left: 10px; /* Adjust spacing between icon and text */
+    margin-left: 10px;
 }
 
 .icon {
@@ -49,8 +38,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    margin-right: 10px; /* Moves icon closer to the text */
-    flex-shrink: 0; /* Ensures the icon doesn’t shrink in size */
+    margin-right: 10px;
 }
 
 .add {
