--- a/frontend/src/app/styles/button1.module.css
+++ b/frontend/src/app/styles/button1.module.css
@@ -5,8 +5,8 @@
     gap: 20px; /* Space between buttons */
     margin-top: 50px; /* Increased margin to move buttons closer to the recipe block */
     margin-right: 35%;
-    margin-bottom: -12%;
-    margin-top: 20%
+    margin-bottom: -34%;
+    margin-top: -3%;
 }
 
 .main {
