--- a/frontend/src/app/styles/button1.module.css
+++ b/frontend/src/app/styles/button1.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+  
 .container {
     display: flex;
     justify-content: center; /* Center the buttons horizontally */
@@ -27,9 +29,9 @@
 
 .text {
     color: black;
-    font-family: Outfit, sans-serif;
-    font-size: 22px;
+    font-family: Outfit, serif;
     font-weight: 700;
+    font-size: 22px;
     margin-left: 10px;
 }
 
