--- a/frontend/src/app/styles/expired.module.css
+++ b/frontend/src/app/styles/expired.module.css
@@ -49,6 +49,8 @@
 
 
 .text {
+    font-family: Outfit, serif;
+    font-weight: 700;
     font-size: 1.5em;
     color: #fff; 
     font-weight: bold;
