--- a/frontend/src/app/styles/fridge.module.css
+++ b/frontend/src/app/styles/fridge.module.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 :root {
     --background: #ffffff;
     --foreground: #171717;
@@ -89,6 +90,9 @@ html, body
 }
 
 .words {
+    color: black;
+    font-family: Outfit, serif;
+    font-weight: 500;
     font-size: 14px;
     margin-left: 5%;
     margin-top: 3%;
