--- a/frontend/src/app/styles/globals.css
+++ b/frontend/src/app/styles/globals.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 
 :root {
   --background: #ffffff;
@@ -13,6 +15,22 @@
   --white: #FFFFFF;
   --grey: #D9D9D9;
 }
+
+.text1 {
+  font-family: "Outfit", serif;
+  font-optical-sizing: auto;
+  font-weight: 700px;
+  font-style: normal;
+}
+
+.text2 {
+  font-family: "Outfit", serif;
+  font-optical-sizing: auto;
+  font-weight: 400px;
+  font-style: normal;
+}
+
+ 
 
 @media (prefers-color-scheme: dark) {
   :root {
