--- a/frontend/src/app/styles/grocerylist.module.css
+++ b/frontend/src/app/styles/grocerylist.module.css
@@ -27,11 +27,19 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 105%;
     border-radius: 42px;
     background: var(--blue3);
     z-index: 1; /* Ensures it's below the lining */
 }
+
+.text {
+    font-size: 25px; /* Adjust as needed */
+    color: #ffffff; /* Text color */
+    margin-left: 20%;
+    margin-top: 5%
+}
+
 .lining{
     position: absolute;
 
@@ -255,3 +263,18 @@
     flex-shrink: 0;
     z-index: 2;
 }
+
+.groceryItem {
+    display: flex; /* Flex layout for checkbox and input */
+    align-items: center; /* Align vertically */
+    margin-bottom: 10px; /* Space between items */
+  }
+  
+  .checkboxContainer {
+    margin-right: 10px; /* Space between checkbox and text input */
+  }
+  
+  .inputContainer {
+    flex-grow: 1; /* Allow the input to take up the remaining space */
+  }
+  
