--- a/frontend/src/app/styles/popup1.module.css
+++ b/frontend/src/app/styles/popup1.module.css
@@ -43,7 +43,7 @@
 .close {
     font-family: Outfit, serif;
     font-weight: 500;
-    background: #354052;
+    background: #0067C1;
     color: white;
     border: none;
     border-radius: 4px;
@@ -51,6 +51,7 @@
     margin-top: 20%;
     cursor: pointer;
     font-size: 16px;
+    width: 100%;
 }
 
 .form {
@@ -64,6 +65,7 @@
 .title {
     margin-top: 10%;
     font-family: Outfit, serif;
+    color: #0067C1;
     font-weight: 700;
     display: flex;
     flex-direction: column;
@@ -79,6 +81,7 @@
     cursor: pointer;
     width: 40px;
     height: 40px;
+    color: #0067C1;
 }
 
 .name {
